# Legavos2

designs/: BearingPlate.blend  Calf.blend  Core.blend  Foot.blend  Legavos2.blend  ServoPins.blend  Thigh.blend
designs/Reference/GeometryNodes/: Revolve.blend
designs/Reference/Hardware/M3/: Base.blend  (+4 more)
designs/Reference/Motors/: N20.blend  XL-320.blend
designs/outputs/: BasePlate.stl.blend  BearingPlate.stl.blend  BearingPlateNoBearing.stl.blend  Belly.stl.blend  Calf.stl.blend  FootBracket.stl.blend  FootServoCup.stl.blend  FootTip.stl.blend  QuadPinTest.stl.blend  ThighBottom.stl.blend  ThighTop.stl.blend
simulators/NeuralControl/: Cargo.toml
simulators/NeuralControl/driver/: Cargo.toml
simulators/NeuralControl/neural/: Cargo.toml
simulators/Simulator/: Controller.gd  Network.gd  NeuralNetwork.gd  Neuron.gd  Rnn.gd  RobotBuilt.tscn  SceneControl.gd  ServoTest.tscn  ServoTester.tscn  ServoTesterSlider.gd  Spawner.gd  TestScene.tscn  icon.png.import  project.godot
simulators/Simulator/RobotModel/: Body.blend  Body.blend.import  BodyImported.tscn  Leg.blend  Leg.blend.import  LegImported.tscn  PhysicsMaterial-Blue.tres  PhysicsMaterial.tres  Servo.gd
simulators/quad-sim/: Cargo.toml
simulators/quad-sim/assets_src/: Robot.blend  Robot.glb  World.blend
simulators/quad-sim/bevy-gltf-component-loader/: Cargo.toml
simulators/quad-sim/game/: Cargo.toml
simulators/quad-sim/game/assets/: Robot.glb  World.glb
simulators/quad-sim/game/src/: controller.rs  gltf_loader.rs  main.rs
simulators/quad-sim/neural/: Cargo.toml
tools/: SnapmakerA350PLA.ini
(+104 files in other folders)
