[package]
name = "quad-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
bevy_rapier3d = { version = "0.18", features = [ "simd-stable", "debug-render" ] }
bevy-scene-hook = "4.1.0"

[dependencies.neural]
path='../neural'
